# AI-Playground

./: .gitignore  pyproject.toml
openai_examples/01_basic/: main.py
openai_examples/02_user_input/: main.py
openai_examples/03_continuous_conversation/: main.py
openai_examples/04_code_review/: main.py
openai_examples/05_function_calling/: main.py
openai_examples/06_promptlayer/: main.py
openai_examples/07_prompt_templates/: main.py  temp-test.py
openai_examples/08_scoring/: main.py
openai_examples/09_image_generation/: main.py
openai_examples/10_image_variation/: main.py
openai_examples/12_large_text_summary/: main.py
openai_examples/13_embeddings/: main.py
